Cadastrando e validando o usuario client

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts"
+  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "prisma": "^3.8.1",
     "ts-node-dev": "^1.1.8",
